# rust-bittorrent

./: .gitignore  Cargo.toml  Makefile  README.md  foo.toml
.github/: dependabot.yml
.github/workflows/: build-and-test.yml
bt/: Cargo.toml
bt/src/: cli.rs  http.rs  main.rs  peer_download.rs  peer_upload.rs  torrent.rs  udp.rs
bt/tests/: test-file.torrent
models/: Cargo.toml
models/src/: lib.rs
src/: http.rs  main.rs  torrent.rs  udp.rs
tracker/: Cargo.toml  Dockerfile  foo.toml
tracker/src/: main.rs
