[package]
name = "rust-bittorrent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
log = "0.4.21"
env_logger = "0.11.3"
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"
hex = "0.4.3"
lava_torrent = "0.11.1"
form_urlencoded = "1.2.1"
serde_bencode = "^0.2.4"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.14"
sha1 = "0.10.6"
clap = { version = "4.5.7", features = ["derive"] }

[dev-dependencies]
wiremock = "0.6.0"