[package]
name = "bt"
version = "0.1.0"
edition = "2021"

[dependencies]
models = { path = "../models" }
anyhow = "1.0.89"
log = "0.4.21"
env_logger = "0.11.3"
reqwest = "0.12.8"
tokio = { version = "1.40.0", features = ["full"] }
tokio-macros = "2.3.0"
hex = "0.4.3"
lava_torrent = "0.11.1"
form_urlencoded = "1.2.1"
serde_bencode = "^0.2.4"
serde = "^1.0.210"
serde_derive = "^1.0.0"
serde_bytes = "0.11.14"
sha1 = "0.10.6"
clap = { version = "4.5.20", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
console = "0.15.8"
serde_json = "1.0.128"
rand = "0.8.5"
async-channel = "2.3.1"

[dev-dependencies]
wiremock = "0.6.2"
tempfile = "3.13.0"
